# sql-diff-migration

./: .gitignore  README.md  REQUIREMENTS.md  main.py  pyproject.toml
features/: migration_planning.feature
features/steps/: migration_steps.py
sql_diff_migrate/: __init__.py  cli.py  commands.py  compiler.py  config.py  ddl_executor.py  git_ops.py  ir.py  models.py  pipeline.py  schema_diff.py  store.py
tests/: test_cli.py  test_e2e_apply_git.py  test_e2e_plan_git.py  test_git_ops.py  test_integration_postgres_apply.py  test_pipeline_apply_transactional.py  test_schema_diff.py
